fix policy modal on mobile

--- a/src/features/applicant-form/components/PrivacyPolicyModal/PrivacyPolicyModal.module.scss
+++ b/src/features/applicant-form/components/PrivacyPolicyModal/PrivacyPolicyModal.module.scss
@@ -4,15 +4,24 @@
 .modalContainer {
   display: flex;
   flex-direction: column;
-  max-height: calc(100vh - 200px);
+  max-height: calc(100vh - 100px);
   max-width: 758px;
   position: relative;
+
+  @media screen and (min-width: $desktop) {
+    max-height: calc(100vh - 200px);
+  }
 }
 
 .title {
   @include h3;
-  padding: 40px 40px 32px;
-  text-align: center;
+  padding: 20px 20px 32px;
+  text-align: left;
+
+  @media screen and (min-width: $desktop) {
+    padding: 40px 40px 32px;
+    text-align: center;
+  }
 }
 
 .body {
@@ -20,11 +29,15 @@
   font-size: 20px;
   line-height: 1.9em;
   overflow-y: scroll;
-  padding: 0 40px;
+  padding: 0 20px;
+
+  @media screen and (min-width: $desktop) {
+    padding: 0 40px;
+  }
 }
 
 .footer {
-  padding: 40px;
+  padding: 20px;
   position: relative;
   text-align: center;
 
@@ -38,10 +51,18 @@
     top: -30px;
     width: 100%;
   }
+
+  @media screen and (min-width: $desktop) {
+    padding: 40px;
+  }
 }
 
 .button {
-  width: 360px;
+  width: 100%;
+
+  @media screen and (min-width: $desktop) {
+    width: 360px;
+  }
 }
 
 .closeButton {
